Fixing alignment

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -51,7 +51,7 @@
 }
 .form__session-col-attend
 {
-	width: 25%;
+	width: 100%;
 	text-align: right;
 	align-items: center;
 	margin-bottom: 0;
